# CANenbl_unifiedRadarTracker

./: .gitignore  CHANGELOG.md  GEMINI.md  README.md  alternatives_comparison.html  config.py  corruption_fix_proposal.html  dual_pipeline_plan.md  gpio_test.py  index.html  main.py  merge_plan.md  playback_test.py  problem_summary.txt  pyproject.toml  technical_overview.html  test_documentation.html
sample_console_out/: console_log.txt
src/can_logger_app/: can_handler.py  can_process.py  config.py  data_processor.py  gpio_handler.py  log_writer.py  main.py  main_diag.py  utils.py
src/can_service/: data_processor.py  live_can_manager.py
src/radar_tracker/: console_logger.py  data_adapter.py  json_log_handler.py  json_logger.py  live_visualizer.py  main.py  main_live.py  main_playback.py
src/radar_tracker/hardware/: hw_comms_utils.py  parsing_utils.py  read_and_parse_frame.py
src/radar_tracker/tracking/: export_to_json.py  parameters.py  tracker.py  update_and_save_history.py  visualize_track_history.py
tests/: runtime_error.txt  test_can_service.py  test_data_corruption.html  test_documentation.html  tests_main.py
tests/documentation/: tests.md  tests_readme.md
tests/lib/: can_service_test_runner.py  data_corruption_test_runner.py  dual_pipeline_test_runner.py  live_can_manager_fixed.py  live_data_pipeline_test_runner.py  main_app_logic_test_runner.py  parse_log_to_json.py
tests/test_cases/: test_can_log_playback.py  test_can_service.py  test_data_corruption.py  test_dual_pipeline_simulation.py  test_live_data_pipeline.py  test_main_app_logic.py
(+3 files in other folders)
