[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "canenbl-unifiedradartrcker"
version = "0.1.0"
description = "A high-performance, real-time CAN signal logger and radar tracker."
readme = "README.md"
# This is correct for your Python 3.12 install
requires-python = ">=3.10, <=3.14" 
dependencies = [
    "python-can",
    "cantools",
    "canlib",
    "numpy",
    "pyserial",
    #"PyQt5",               #use uv pip install for this
    "pyqtgraph",
    "scipy",
    "psutil",
    "RPi.GPIO",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]